fix: add new todos to ul list & li styling

--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
             <li class="todo">
                 <input type="checkbox" id="grocery">
                 <label for="grocery">Go buy groceries</label>
-                <ul class="sub-item">
+                <!-- <ul class="sub-item">
                     <li>
                         <a class="sub-item-link" target="_blank" href="https://www.instacart.com/store">Instacart</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
 
             <li class="todo">
                 <input type="checkbox" id="shoes">
                 <label for="shoes">Get new Nike shoes</label>
-                <ul class="sub-item">
+                <!-- <ul class="sub-item">
                     <li>
                         <a class="sub-item-link" target="_blank" href="https://www.nike.com/?cp=56054315366_search_-nike-g-20300414621-150548537237-e-c&dplnk=member&gad_campaignid=20300414621">Nike</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
 
             <li class="todo">
                 <input type="checkbox" id="dinner">
                 <label for="dinner">Dinner with friends</label>
-                <ul class="sub-item">
+                <!-- <ul class="sub-item">
                     <li>
                         <a class="sub-item-link" target="_blank" href="https://maps.app.goo.gl/agii7LAnvuhfocT66">Google Maps - The Dearbon</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
             <li class="todo">
                 <input type="checkbox" id="zoom">
                 <label for="zoom">Attend Zoom call</label>
-                <ul class="sub-item">
+                <!-- <ul class="sub-item">
                     <li>
                         <a class="sub-item-link" target="_blank" href="https://www.zoom.com">Zoom - Meeting</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
         </ul>
         <div id="test">
