implement "delete todo" functionality
rework "add todo"

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Styled To-Do List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,44 +17,17 @@
         </form>
         <ul class="todo-list">
 
-            <li class="todo">
+            <!-- <li class="todo">
                 <input type="checkbox" id="grocery">
                 <label for="grocery">Go buy groceries</label>
-                <!-- <ul class="sub-item">
+                <div><button class="delete-todo">delete</button></div>
+                <ul class="sub-item">
                     <li>
                         <a class="sub-item-link" target="_blank" href="https://www.instacart.com/store">Instacart</a>
                     </li>
-                </ul> -->
-            </li>
+                </ul>
+            </li> -->
 
-            <li class="todo">
-                <input type="checkbox" id="shoes">
-                <label for="shoes">Get new Nike shoes</label>
-                <!-- <ul class="sub-item">
-                    <li>
-                        <a class="sub-item-link" target="_blank" href="https://www.nike.com/?cp=56054315366_search_-nike-g-20300414621-150548537237-e-c&dplnk=member&gad_campaignid=20300414621">Nike</a>
-                    </li>
-                </ul> -->
-            </li>
-
-            <li class="todo">
-                <input type="checkbox" id="dinner">
-                <label for="dinner">Dinner with friends</label>
-                <!-- <ul class="sub-item">
-                    <li>
-                        <a class="sub-item-link" target="_blank" href="https://maps.app.goo.gl/agii7LAnvuhfocT66">Google Maps - The Dearbon</a>
-                    </li>
-                </ul> -->
-            </li>
-            <li class="todo">
-                <input type="checkbox" id="zoom">
-                <label for="zoom">Attend Zoom call</label>
-                <!-- <ul class="sub-item">
-                    <li>
-                        <a class="sub-item-link" target="_blank" href="https://www.zoom.com">Zoom - Meeting</a>
-                    </li>
-                </ul> -->
-            </li>
         </ul>
         <div id="test">
         </div>
