--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <input type='text' id="input-todo" placeholder="enter todo..." default="hello">
             <button id="addBtn" type="submit">Add Todo</button>
         </form>
+        <button class="clear">Clear Todo List</button>
         <ul class="todo-list">
 
             <!-- <li class="todo">
