add checkbox and edit button CSS styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="todo-body">
         <h1 class="list-title">My Todo-List</h1>
         <form class="input-form" onsubmit="return false">
-            <input type='text' id="input-todo" placeholder="enter todo..." default="hello">
+            <input type='text' id="input-todo" placeholder="enter todo...">
             <button id="addBtn" type="submit">Add Todo</button>
         </form>
         <button class="clear">Clear Todo List</button>
