implement "edit todo" functionality

--- a/index.html
+++ b/index.html
@@ -17,18 +17,27 @@
         </form>
         <button class="clear">Clear Todo List</button>
         <ul class="todo-list">
-
-            <!-- <li class="todo">
-                <input type="checkbox" id="grocery">
-                <label for="grocery">Go buy groceries</label>
-                <div><button class="delete-todo">delete</button></div>
-                <ul class="sub-item">
-                    <li>
-                        <a class="sub-item-link" target="_blank" href="https://www.instacart.com/store">Instacart</a>
-                    </li>
-                </ul>
+        <!-- <li class="todo">
+                <dvi class="edit-hide">
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="buy groceries">
+                        <i class="fa-regular fa-square unchecked"></i>
+                        <i class="fa-regular fa-square-check checked"></i>
+                        <div class="text">
+                            buy groceries
+                        </div>
+                    </label>
+                    <div class="todo-buttons">
+                        <button class="delete-todo"><i class="fa-solid fa-trash-can"></i></button>
+                        <button class="edit-todo"><i class="fa-solid fa-pen-to-square"></i></button>
+                    </div>
+                    <ul class="sub-item">
+                        <li>
+                            <a class="sub-item-link" target="_blank" href="https://www.instacart.com/store">Instacart</a>
+                        </li>
+                    </ul>
+                </div>
             </li> -->
-
         </ul>
         <div id="test">
         </div>
