Revert "test run"
This reverts commit 342a08a94889a677993f5d2723ae9b3c1e09abef.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="todo-body">
-        <h1 class="list-title">This is a test</h1>
+        <h1 class="list-title">My Todo-List</h1>
         <form class="input-form" onsubmit="return false">
             <input type='text' id="input-todo" placeholder="enter todo...">
             <button id="addBtn" type="submit">Add Todo</button>
